# astro-cv

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  ads-config.yaml  authorization_key.json  config.py  environment.yaml  makecv.py  manage-pubs.py  pyproject.toml  sections.py  structure.py
minimal-config-example/: contact-information.toml  cv-settings.toml  education.toml  research-interests.toml  summary-profile.toml
minimal-config-example/ads/: config.toml
src/astro-cv/: makecv.py  manage-pubs.py
src/astro_cv/: cli.py  makecv.py  sections.py  structure.py
src/astro_cv/data_connectors/: README.md  __init__.py  github.py  gsheet.py  toml.py
src/astro_cv/data_connectors/ads/: __init__.py  cli.py  connector.py  stats.py
src/astro_cv/formats/: README.md  __init__.py  latex.py
src/astro_cv/pub_management/: __init__.py  cli.py  datatypes.py  nasa_ads.py  stats.py
src/astro_cv/sections/: README.md  __init__.py
src/astro_cv/sections/academic_experience/: __init__.py  datatype.py  latex.py
src/astro_cv/sections/academic_references/: __init__.py  datatype.py  latex.py
src/astro_cv/sections/awards_and_scholarships/: __init__.py  datatype.py  latex.py
src/astro_cv/sections/contact_information/: __init__.py  datatype.py  latex.py
src/astro_cv/sections/education/: __init__.py  datatype.py  latex.py
src/astro_cv/sections/presentations/: __init__.py  datatype.py  latex.py
src/astro_cv/sections/press_releases/: __init__.py  datatype.py  latex.py
src/astro_cv/sections/professional_experience/: __init__.py  datatype.py  (+1 more)
tests/: test-api.py
(+15 files in other folders)
