[project]
name = "astro-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ads",
    "attrs>=25.4.0",
    "cache-to-disk>=2.0.0",
    "cyclopts>=3.0.0",
    "gql>=4.0.0",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "pyaml>=25.7.0",
    "pygithub>=2.8.1",
    "questionary>=2.1.1",
    "requests-toolbelt>=1.0.0",
    "rich>=13.0.0",
    "termgraph>=0.7.5",
    "tomli-w>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
ads = { git = "https://github.com/andycasey/ads" }

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]

[project.scripts]
astro-cv = "astro_cv.cli:main"
